# distributed-benchmark-platform

./: README.md  docker-compose.yml  env.example  gitignore  go.mod
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/api/: health_handler.go  leaderboard_handler.go  routes.go  submission_handler.go
backend/cmd/: main.go
backend/config/: config.go  database.go
backend/migrations/: 001_create_submissions.sql  002_create_metrics.sql  003_create_leaderboard.sql  004_add_python_language.sql
backend/models/: benchmark.go  leaderboard.go  metric.go  submission.go
backend/services/: helpers.go  queue_service.go  sandbox_service.go  scoring_service.go  tar_helper.go  telemetry_ingester.go
backend/services/botfleet/: fleet.go  order_gen.go  protocol.go  worker.go
backend/utils/: logger.go  response.go  validator.go
backend/workers/: benchmark_worker.go
docs/: architecture.md
frontend/: Dockerfile  app.js  index.html  style.css
sample-trading-engine/: Dockerfile  requirements.txt
sample-trading-engine-cpp/: CMakeLists.txt  Dockerfile
sample-trading-engine-cpp/src/: main.cpp
sample-trading-engine/src/: main.py
